--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ cache: bundler
 before_install:
 - gem update --system --no-document
 - gem install bundler --no-document
-before_script:
-- docker run --privileged -d --name itamae-plugin-dev $IMAGE /sbin/init
 script:
-- bundle exec rake itamae:apply spec
+- bundle exec itamae docker --node-yaml=spec/recipes/node.yml spec/recipes/install.rb --image=$IMAGE --tag itamae-plugin:latest
+- DOCKER_IMAGE=itamae-plugin:latest bundle exec rspec
 branches:
   only:
   - master
