--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
         image:
           - centos:7
           - debian:jessie
+          - debian:stretch
+          - debian:buster
           - amazonlinux:2
         include:
           - ruby: 2.3.0
