--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,7 @@ jobs:
           DOCKER_IMAGE: itamae-plugin:latest
 
       - name: Slack Notification (not success)
-        uses: homoluctus/slatify@master
+        uses: lazy-actions/slatify@master
         if: "! success()"
         continue-on-error: true
         with:
@@ -87,7 +87,7 @@ jobs:
 
     steps:
       - name: Slack Notification (success)
-        uses: homoluctus/slatify@master
+        uses: lazy-actions/slatify@master
         if: always()
         continue-on-error: true
         with:
